# FORGE-Artifacts

./: .gitignore  LICENSE  README.md
dataset/: access_reports.ipynb
dataset/results/: $PePe coin Full Smart Contract Security Audit.pdf.json  $TMF-Audit-by-BlockSAFU.pdf.json  $joke.pdf.json  $jus.pdf.json  $only.pdf.json  $solar.pdf.json  $tkt.pdf.json  $xenox.pdf.json  %24mddoge.pdf.json  02_Smart Contract Audit 1inch_Mooniswap_and_Token_Updated.pdf.json  02_Smart Contract Audit DIA Token Yield.pdf.json  02_Smart Contract Audit Nexxo.pdf.json  02_Smart Contract Audit Percent Finance.pdf.json  02_Smart Contract Audit Shopping_GSPI_Club.pdf.json  02_Smart Contract Audit Shopping_GSPI_Staking.pdf.json  02_Smart Contract Audit Shopping_SPI_Staking_v2.pdf.json  02_Smart Contract Audit Stacktical.pdf.json  02_Smart Contract Audit TOUCH.pdf.json  02_Smart Contract Audit Team Finance.pdf.json  02_Smart Contract Audit Unicrypt_Farm.pdf.json  02_Smart Contract Audit Unicrypt_Locking_V2.pdf.json  02_Smart Contract Audit Unicrypt_Presale.pdf.json  02_Smart Contract Audit Unilayer_Farm_LAYERx.pdf.json  02_Smart Contract Audit WallStreetNinjas_WSN_Token.pdf.json  02_Smart Contract Audit World_Token.pdf.json  02_Smart Contract Audit_AGVE.pdf.json  02_Smart Contract Audit_Amun_LIMA_Polygon.pdf.json  02_Smart Contract Audit_Curate_XCUR_Token.pdf.json  02_Smart Contract Audit_Furucombo_Token.pdf.json  02_Smart Contract Audit_IBZ_Token.pdf.json  02_Smart Contract Audit_LaunchX_Token.pdf.json  02_Smart Contract Audit_NEXT_Token.pdf.json  02_Smart Contract Audit_Nearpad_Core.pdf.json  02_Smart Contract Audit_POA_Network.pdf.json  02_Smart Contract Audit_Swapp.ee_Staking.pdf.json  02_Smart_Contract_Audit_Curate_NEW_XCUR_BSC.pdf.json  02_Smart_Contract_Audit_Curate_NEW_XCUR_ETH.pdf.json  0ade76de.pdf.json  0d-gri.pdf.json  0x-protocol.pdf.json  (+6414 more)
evaluation/RQ1/: statistic.ipynb
evaluation/RQ2/: calculate_metrics.py  results.json
evaluation/RQ2/artifacts/: 2024-08-superposition-findings.md  DAO Voting Forwarder.md  Yearn Protocol V1.md  ySwaps.md
evaluation/RQ2/sample/: 1-mdy.pdf.json  1-oto.pdf.json  11-minu.pdf.json  202301191000.pdf.json  2024-08-superposition-findings.md.json  3-hero.pdf.json  4-bbt.pdf.json  AcalaNetwork.pdf.json  Astroape.pdf.json  Audit Report - Benji Token.pdf.json  BILZFarm.pdf.json  BMFloki.pdf.json  BabyChicken.pdf.json  BabyZCash_AuditReport_InterFi.pdf.json  BillionaireCat_0x17534dA60Daff58ee1d77EF4aEc6556E03Ff39B9.pdf.json  BonFi(Legendary) -  Final Audit Report.pdf.json  (+79 more)
evaluation/RQ3/: K-alpha.csv  results.csv
evaluation/RQ4/: results.csv  tool_classifications.csv
src/: .env-example  config.yaml  main.py  pyproject.toml  requirements.txt
src/builder/: build_processor.py
src/classifier/: cwe_handler.py  map_processor.py  tot_reasoner.py
src/core/: base.py  invoker.py  models.py
src/extractor/: document_handler.py  extract_processor.py  map_reducer.py
src/fetcher/: code_fetcher.py  fetch_processor.py  project_parser.py
src/logs/: classify.json
src/sample/: sample.pdf.json
src/sample/sample.pdf-source/POC_ERC20-BEP20/contracts/: POC_BEP20.sol  POC_ERC20.sol
(+6620 files in other folders)
